MBS-11302 add to jvmArgs instead of replacing it; remove duplicates of gradle-test convention